test/parse/expr/bad-try-multiple-catch.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-exceptions
;;; ERROR: 1
(module
  ;; flat
  (func
    try
      nop
    catch_all
      nop
    catch_all
      nop
    end)

  ;; folded
  (func
    (try
      (do
        (nop))
      (catch_all
        (nop))
      (catch_all
        (nop))))
(;; STDERR ;;;
out/test/parse/expr/bad-try-multiple-catch.txt:11:5: error: multiple catch_all clauses not allowed
    catch_all
    ^^^^^^^^^
out/test/parse/expr/bad-try-multiple-catch.txt:13:5: error: unexpected token end, expected ).
    end)
    ^^^
out/test/parse/expr/bad-try-multiple-catch.txt:22:8: error: multiple catch_all clauses not allowed
      (catch_all
       ^^^^^^^^^
out/test/parse/expr/bad-try-multiple-catch.txt:23:16: error: unexpected token ), expected EOF.
        (nop))))
               ^
;;; STDERR ;;)
